--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ScooterSharing</string>
+    <string name="text_view_name">Name:</string>
+    <string name="text_view_location">Location:</string>
+    <string name="start_ride_button">Start Ride</string>
+    <string name="update_ride_button">Update Ride</string>
+    <string name="list_rides_button">List Rides</string>
 </resources>
